--- a/package.json
+++ b/package.json
@@ -1,19 +1,44 @@
 {
   "name": "pacman-api-electron",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron ./src/main.js"
+    "start": "electron ./src/main.js",
+    "build": "electron-builder"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "axios": "^1.7.9",
-    "bootstrap": "^5.3.3",
-    "electron": "^33.2.1",
-    "electron-log": "^5.2.4"
+      "axios": "^1.7.9",
+      "bootstrap": "^5.3.3",
+      "electron-log": "^5.2.4"
+  },
+  "devDependencies": {
+      "electron": "^33.2.1",
+      "electron-builder": "^25.1.8"
+  },
+  "build": {
+    "appId": "com.tuapp.id",
+    "productName": "pacview",
+    "directories": {
+      "output": "dist"
+    },
+    "files": [
+      "src/**/*",
+      "package.json"
+    ],
+    "mac": {
+      "category": "public.app-category.developer-tools"
+    },
+    "win": {
+      "target": "nsis"
+    },
+    "linux": {
+      "target": "AppImage",
+      "category": "Development"
+    }
   }
 }
