feat: add build app image option (with pacman api backend binary)

--- a/package.json
+++ b/package.json
@@ -30,6 +30,12 @@
       "src/**/*",
       "package.json"
     ],
+    "extraResources": [
+      {
+        "from": "src/bin/",
+        "to": "bin/"
+      }
+    ],
     "mac": {
       "category": "public.app-category.developer-tools"
     },
